<resources>
    <string name="app_name">MathQuiz</string>
    <string name="false_text">false</string>
    <string name="true_text">true</string>
    <string name="menu_settings">menu_settings</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="pressOption">First press True or False Button</string>
    <string name="cheat_button">Cheat</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="hint_button">Hint</string>
    <string name="show_hint_button">Show Hint</string>
    <string name="hintWarning_text">Try Hard until you Succeed!!</string>
    <string name="hint_text">A prime number is a whole number greater than 1 whose only two whole-number factors are 1 and itself.</string>
    <string name="hintProvided_text">Hint Provided</string>
</resources>
