<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFDE7"
    tools:context="com.example.veronica.my_first_app.MainActivity">

    <TextView
        android:id="@+id/question_textViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceMedium"
        android:padding="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/trueButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_text"
            />

        <Button
            android:id="@+id/falseButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_text"
            />
    </LinearLayout>

    <!-- <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hint_ButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_button"
            />

        <Button
            android:id="@+id/cheatButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"
            />

    </LinearLayout>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/nextButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:drawableRight="@drawable/right_arrow"
        android:padding="17dp"
        />

        <!-- <ImageButton
            android:id="@+id/prevImageButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_left"
            android:padding="24dp"
            />

        <ImageButton
            android:id="@+id/nextImageButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow_right"
            android:padding="4dp"
            /> -->

    <!-- </LinearLayout> -->

</LinearLayout>
